--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventSummary.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventSummary.cshtml
@@ -8,13 +8,14 @@
 				</div>
 				<div class="event-block-content">
 					<div><span data-bind="text: name, style: { fontSize: '1.6em', lineHeight: '1', paddingBottom: '4px' } "></span></div>
-					<div>godzina rozpoczęcia: <span data-bind="text: startDate.startHour"></span><span>: </span><span data-bind="	text: startDate.startMinute"></span></div>
-					<div>godzina zakończenia: <span data-bind="text: startDate.endHour"></span><span>: </span><span data-bind="	text: startDate.endMinute"></span></div>
-					<div>data: <span data-bind="text: startDate.day"></span><span>/</span><span data-bind="	text: startDate.month"></span><span>/</span><span data-bind="	text: startDate.year"></span></div>
-					<div>adres: <span data-bind="text: address.street"></span><span>, </span><span data-bind="	text: address.city"></span></div>
+					<div style="font-size: 1.4em;"><span>godzina: </span><span data-bind="text: $root.event.startDate.display(startDate.startHour)"></span><span>:</span><span data-bind="	text: $root.event.startDate.display(startDate.startMinute)"></span><span style="padding:0 4px;"> - </span>
+					<span data-bind="text: $root.event.startDate.display(startDate.endHour)"></span><span>:</span><span data-bind="	text: $root.event.startDate.display(startDate.endMinute)"></span></div>
+					<div data-bind="if: address.street">
+					<span>adres: </span><span data-bind="text: address.street"></span><span>, </span><span data-bind="	text: address.city"></span>
+					</div>
 				</div>
 				<div class="details-eventblock-footer">
-					<div class="details-eventblock-show-link link" data-bind="click: function () { $root.showEventInfoOnClick($element) }"><span>pokaż</span></div>
+					<div class="details-eventblock-show-link link" data-bind="click: function () { $root.showEventInfoOnShowLinkClick($element) }"><span>pokaż</span></div>
 				</div>
 			</div>
 			@Html.Partial("_DetailsEventInfo")
