added temporary lobby div

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -106,7 +106,9 @@
 			</div>
 		</section>*@
 	</div>
+	<div style="height:800px;width:200px;">
 
+	</div>
 	<footer class="lobby-footer">
 		Kalendarz Kariery 2014, wszelkie prawa zastrzezone
 	</footer>
