--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -27,10 +27,15 @@
 	  
    }
 
-			<div id="eventsMenuContainer">
+			<div class="events-menu-container">
 				<div class="menu-item-container">
 					<div class="border-item wydarzenia-border-tab"></div>
 					<div class="menu-item" name="wydarzenia"><span>Wydarzenia</span></div>
+				</div>
+				
+				<div class="menu-item-container">
+					<div class="border-item lekcje-border-tab"></div>
+					<div class="menu-item" name="lekcje"><span>Lekcje</span></div>
 				</div>
 
 				<div class="menu-item-container">
