--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventSummary.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventSummary.cshtml
@@ -1,6 +1,6 @@
 ﻿<section>
 	<div data-bind="foreach: myEvents" style="text-align:center;">
-		<div class="lobby-event-rectangle" style="border:1px solid rgb(221, 221, 221); margin: 2px; display:inline-block; padding: 10px;text-align:left;">
+		<div class="lobby-event-rectangle">
 			<div data-bind="style: { color: kind.headerColor, background: 'rgb(130,130,130)', border:'1px solid rgb(221, 221, 221)',  padding: '10px', marginBottom: '10px' }">
 				<span data-bind="text: kind.name"></span>	
 			</div>
