--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyLoggedInBar.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyLoggedInBar.cshtml
@@ -1,5 +1,5 @@
 ﻿<section class="lobby-loggedIn-bar">
-	<div style="overflow: hidden; color: rgb(185, 185, 185); background: rgba(255,255,255,.7);border-top:1px solid white;border-bottom:1px solid rgb(228, 219, 219);text-align:right;">
+	<div style="overflow: hidden; color: rgb(185, 185, 185); /*background: rgba(255,255,255,.7);*/border-top:1px solid white;border-bottom:1px solid rgb(228, 219, 219);text-align:right;">
 		
 		<span class="loggedIn-nickname">@User.Identity.Name</span>
 		@using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
